--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 Flask==3.0.3
+SQLAlchemy==2.0.35
 Flask-SQLAlchemy==3.1.1
 APScheduler==3.10.4
-gunicorn==21.2.0
+python-dateutil==2.9.0.post0
+Werkzeug==3.0.4
+gunicorn==22.0.0
