--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==3.0.3
-SQLAlchemy==2.0.35
 Flask-SQLAlchemy==3.1.1
-APScheduler==3.10.4
+SQLAlchemy==2.0.36
+gunicorn==21.2.0
+Jinja2==3.1.4
+Werkzeug==3.0.3
+itsdangerous==2.2.0
 python-dateutil==2.9.0.post0
-Werkzeug==3.0.4
-gunicorn==22.0.0
