--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eas-tracker",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "EastAfricaShop Business Tracker — full dashboard for daily performance, shipments, remittances, influencers, and finance management.",
   "main": "server.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "uuid": "^9.0.1"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=18.0.0"
   },
   "keywords": [
     "eastafricashop",
