--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "EAS Tracker System for EastAfricaShop — stock, finance, and performance management.",
+  "description": "EastAfricaShop Business Tracker — stock, ads, finance, performance management system",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
-    "body-parser": "^1.20.3",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "path": "^0.12.7",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "express": "^4.21.1",
-    "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.0.3"
   },
   "engines": {
     "node": ">=18"
   },
   "author": "EastAfricaShop",
-  "license": "ISC"
+  "license": "MIT"
 }
