--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "EAS Tracker – Business management and performance tracking system for EastAfricaShop.",
+  "description": "EastAfricaShop Business Tracking System",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'No build step needed for EAS Tracker (static + Express)'"
+    "dev": "nodemon server.js"
   },
+  "author": "EastAfricaShop",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cookie-parser": "^1.4.7",
-    "express": "^4.19.2",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
     "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
-    "path": "^0.12.7",
     "uuid": "^9.0.1"
   },
   "engines": {
-    "node": ">=18.x"
-  },
-  "author": "EastAfricaShop",
-  "license": "MIT"
+    "node": ">=18.0.0"
+  }
 }
