--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "EastAfricaShop Business Tracking System",
+  "description": "East Africa Shop business tracking system",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "author": "EastAfricaShop",
-  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
-    "fs-extra": "^11.2.0",
-    "morgan": "^1.10.0",
-    "uuid": "^9.0.1"
+    "cookie-parser": "^1.4.7",
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   },
   "engines": {
-    "node": ">=18.0.0"
-  }
+    "node": ">=18"
+  },
+  "keywords": [],
+  "author": "EAS System",
+  "license": "MIT"
 }
