--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "East Africa Shop business tracking system",
+  "description": "EastAfricaShop Business Tracker — full backend and dashboard system",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.7",
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.0.3"
   },
   "engines": {
     "node": ">=18"
   },
-  "keywords": [],
-  "author": "EAS System",
+  "author": "EastAfricaShop",
   "license": "MIT"
 }
