--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "EastAfricaShop Business Tracker — full backend and dashboard system",
+  "private": true,
+  "description": "EAS Tracker – simple full-stack app (Express + vanilla JS)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "NODE_ENV=development nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.18.2",
+    "cookie-parser": "^1.4.7",
+    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.1.0"
   },
   "engines": {
     "node": ">=18"
-  },
-  "author": "EastAfricaShop",
-  "license": "MIT"
+  }
 }
