--- a/package.json
+++ b/package.json
@@ -2,24 +2,17 @@
   "name": "eas-tracker",
   "version": "1.0.0",
   "private": true,
-  "description": "EAS Tracker – simple full-stack app (Express + vanilla JS)",
-  "main": "server.js",
+  "type": "commonjs",
+  "engines": { "node": ">=18.x" },
   "scripts": {
-    "start": "node server.js",
-    "dev": "NODE_ENV=development nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.7",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "engines": {
-    "node": ">=18"
   }
 }
