--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "East Africa Shop business tracker",
+  "description": "EAS Tracker System for EastAfricaShop (Dashboard, Finance, Shipments, Ads, Remittance, Influencers)",
   "main": "server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
-    "express": "^4.21.1",
+    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
-  "engines": {
-    "node": ">=18"
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   },
-  "author": "East Africa Shop",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "license": "MIT"
 }
