--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eas-tracker",
-  "version": "2.1.0",
-  "description": "EAS Tracker – dashboards for performance, shipments, remittances, influencers and finance.",
+  "version": "3.0.0",
+  "description": "EastAfricaShop Business Tracker — dashboard for daily performance, shipments, remittances, influencers, and finance.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -18,6 +18,8 @@
     "uuid": "^9.0.1"
   },
   "engines": {
-    "node": ">=18"
-  }
+    "node": ">=18.0.0"
+  },
+  "author": "EAS Systems",
+  "license": "MIT"
 }
