--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "eas-tracker",
-  "version": "1.0.0",
-  "description": "EAS Tracker",
+  "version": "3.1.0",
+  "description": "EastAfricaShop Business Tracker — dashboard for daily performance, shipments, finance, remittances, and inventory tracking.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "snapshot": "node snapshot.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "express": "^4.19.2",
+    "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
+    "path": "^0.12.7",
     "uuid": "^9.0.1"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "author": "EAS Systems",
+  "license": "MIT"
 }
