--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "East Africa Shop business tracking system",
+  "description": "East Africa Shop Business Tracker",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "snapshot": "node snapshot.js",
-    "snapshot:create": "node snapshot.js create",
-    "snapshot:list": "node snapshot.js list",
-    "snapshot:restore": "node snapshot.js restore"
+    "snapshot": "node scripts/snapshot.js"
   },
   "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
+    "fs-extra": "^11.2.0",
     "uuid": "^9.0.1"
   },
   "engines": {
