--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "eas-tracker",
   "version": "1.0.0",
-  "description": "East Africa Shop Business Tracker",
+  "description": "East Africa Shop business tracking system",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "snapshot": "node scripts/snapshot.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "morgan": "^1.10.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "fs-extra": "^11.2.0",
+    "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
   "engines": {
