--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
   "name": "eas-tracker",
-  "version": "1.0.0",
-  "description": "East Africa Shop business tracking system",
+  "version": "2.0.0",
+  "description": "East Africa Shop Business Management System",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js",
+    "snapshot": "node scripts/snapshot.js",
+    "snapshot:create": "node scripts/snapshot.js create",
+    "snapshot:list": "node scripts/snapshot.js list"
   },
   "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "fs-extra": "^11.2.0",
     "morgan": "^1.10.0",
+    "fs-extra": "^11.2.0",
     "uuid": "^9.0.1"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "keywords": [
+    "ecommerce",
+    "inventory",
+    "africa",
+    "business",
+    "tracking"
+  ]
 }
