--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "build": "echo 'No build step required'",
     "snapshot": "node snapshot.js",
     "snapshot:create": "node snapshot.js create",
     "snapshot:list": "node snapshot.js list"
