--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "eas-tracker",
-  "version": "1.0.0",
-  "description": "East Africa Shop Business Tracker",
+  "version": "2.0.0",
+  "description": "East Africa Shop Business Tracker - Enhanced Version",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'No build step required'",
     "snapshot": "node snapshot.js",
     "snapshot:create": "node snapshot.js create",
     "snapshot:list": "node snapshot.js list"
