--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eas-tracker",
-  "version": "2.0.0",
-  "description": "East Africa Shop Business Tracker - Enhanced Version",
+  "version": "1.0.0",
+  "description": "East Africa Shop Business Tracker",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
