--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "node server.js",
     "snapshot": "node snapshot.js",
     "snapshot:create": "node snapshot.js create",
     "snapshot:list": "node snapshot.js list"
@@ -14,7 +15,6 @@
     "fs-extra": "^11.2.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
   },
