--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "dev": "node server.js",
     "snapshot": "node snapshot.js",
     "snapshot:create": "node snapshot.js create",
-    "snapshot:list": "node snapshot.js list"
+    "snapshot:list": "node snapshot.js list",
+    "backup": "node backup.js",
+    "backup:create": "node backup.js create",
+    "backup:list": "node backup.js list",
+    "backup:cleanup": "node backup.js cleanup",
+    "restore": "node restore.js"
   },
   "dependencies": {
     "express": "^4.19.2",
@@ -17,6 +22,9 @@
     "cookie-parser": "^1.4.6",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-s3": "^3.490.0"
   },
   "engines": {
     "node": ">=18.0.0"
