--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eas-tracker",
-  "version": "2.0.0",
-  "description": "East Africa Shop Business Tracker - Enhanced Version",
+  "version": "1.0.0",
+  "description": "East Africa Shop Business Tracker",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -22,6 +22,9 @@
     "cookie-parser": "^1.4.6",
     "morgan": "^1.10.0",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@aws-sdk/client-s3": "^3.490.0"
   },
   "engines": {
     "node": ">=18.0.0"
